--- a/src/webapp/src/app/home/home.component.scss
+++ b/src/webapp/src/app/home/home.component.scss
@@ -228,11 +228,19 @@
   align-items: center;
   position: relative;
   overflow: hidden;
+  aspect-ratio: 16 / 9;
+  width: 100%;
+}
+
+.mockup-content picture {
+  display: block;
+  width: 100%;
+  height: 100%;
 }
 
 .mockup-poster {
   width: 100%;
-  height: auto;
+  height: 100%;
   border-bottom-left-radius: 8px;
   border-bottom-right-radius: 8px;
   display: block;
